test/tests/errors/error-class-inherit-no-override-private.sm
// true
// false
// false
/**/
/**/

program {
    class A {
        private var x: int = 1;
    }

    class B extends A {
        private var x: int = 1;
    }
}